--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.49.3",
+    "react-icons": "^5.0.1",
     "react-simple-typewriter": "^5.0.1",
-    "react-use-scroll-position": "^2.0.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
