--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
+    "axios": "^1.6.7",
     "framer-motion": "^10.18.0",
     "next": "14.0.4",
     "react": "^18",
@@ -17,6 +18,7 @@
     "react-hook-form": "^7.49.3",
     "react-icons": "^5.0.1",
     "react-simple-typewriter": "^5.0.1",
+    "resend": "^3.2.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
