--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-hook-form": "^7.49.3",
     "react-icons": "^5.0.1",
     "react-simple-typewriter": "^5.0.1",
+    "react-starfield": "^1.0.3",
     "resend": "^3.2.0",
     "zod": "^3.22.4"
   },
