--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
+    "@react-email/components": "^0.0.18",
     "axios": "^1.6.7",
     "framer-motion": "^10.18.0",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-email": "^2.1.3",
     "react-hook-form": "^7.49.3",
     "react-icons": "^5.0.1",
     "react-simple-typewriter": "^5.0.1",
